[package]
name = "WARCH"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winapi="0.3.9"
#signal-hook = "0.3.14"
#console = "0.15.2"
#crossterm = "0.16.0"
winit = "0.27.5"
pixels = "0.10.0"
winit_input_helper = "0.13"
log = "0.4.17"